# databr

./: .dockerignore  .env.example  .gitignore  .golangci.yml  Dockerfile  Dockerfile.collector  README.md  docker-compose.yml  go.mod  go.sum  plano_cancelamento_movimentos_v2 2.docx  plano_cancelamento_movimentos_v2.md  railway.collector.toml  server.json
.github/workflows/: ci.yml
cmd/api/: main.go
cmd/bazaar-test/: main.go
cmd/collector/: main.go
cmd/purge/: main.go
cmd/seed/: main.go
cmd/sign-ownership/: main.go
docs/: landing.html  openapi.yaml  scalar.html  static.go
docs/plans/: 2026-03-01-novas-fontes-br-acc.md
internal/cache/: etag.go  etag_test.go  middleware.go  middleware_test.go  redis.go  redis_test.go
internal/collectors/: retry.go  retry_test.go
internal/domain/: source.go
internal/handlers/: ambiental.go  ambiental_test.go  ans.go  ans_test.go  bcb.go  bcb_test.go  bndes.go  bndes_test.go  carteira_risco.go  carteira_risco_test.go  comercio.go  competicao.go  competicao_test.go  compliance.go  compliance_test.go  (+85 more)
migrations/: 001_initial.sql
scripts/: curl-tests.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/databr/: __init__.py  client.py  constants.py  exceptions.py  response.py
sdk/python/src/databr/namespaces/: __init__.py  _base.py  ambiental.py  bcb.py  comercio.py  compliance.py  economia.py  educacao.py  emprego.py  empresas.py  energia.py  judicial.py  legislativo.py  mercado.py  saude.py  transparencia.py  transporte.py
sdk/python/tests/: conftest.py  test_client.py  test_namespaces.py  test_response.py
(+127 files in other folders)
