[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databr"
version = "0.1.0"
description = "Python SDK for DataBR — Brazilian public data API with x402 payments"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DataBR", email = "sdk@databr.api.br" }]
keywords = ["brazil", "api", "x402", "data", "public-data", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "x402[requests,evm]>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "responses>=0.25", "ruff>=0.4"]

[project.urls]
Homepage = "https://databr.api.br"
Documentation = "https://databr.api.br/docs"
Repository = "https://github.com/databr/api"

[tool.hatch.build.targets.wheel]
packages = ["src/databr"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
